updated the header and fixed the z-indexes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,19 @@
     box-sizing: border-box;
   }
 
+  header {
+    width: 100%;
+    height: 77px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: #ffffff;
+    border-bottom: 2px solid #cccccc;
+    padding: 0;
+    margin: 0;
+    z-index: 2;
+}
+
 body {
     display: block;
     height: 100vh;
@@ -23,6 +36,7 @@ body {
     border-bottom: 2px solid #cccccc;
     padding: 0;
     margin: 0;
+    z-index: 3;
   }
 
 #left {
@@ -88,7 +102,7 @@ body {
     color: #333;
     line-height: 150%;
     padding: 0;
-    z-index: -1;
+    z-index: 1;
 }
 
 #About-Me {
@@ -185,6 +199,7 @@ img {
     top: 7px;
     float: left;
     background-color: #ffffff;
+    z-index: 1;
 }
 
 label {
